# pyAdmin

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  modules.rst
docs/source/: conf.py  index.rst  modules.rst  pyAdmin.command_executor.rst  pyAdmin.system_monitoring.rst
pyAdmin/: __init__.py  command_executor.py  file_manager.py  system_monitoring.py  utils.py
tests/: __init__.py  test_command_executor.py  test_file_manager.py  test_system_monitoring.py
