[metadata]
name = pyAdmin
version = 0.1.1
author = Шулика Вадим Владимирович
author_email = vadim.shulika4@gmail.com
description = CLI-утилита для управления файлами и мониторинга системы.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vadimshulika/pyAdmin
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir = 
    = .
packages = find:
install_requires =
    psutil >= 5.9.0
python_requires = >=3.8
include_package_data = True

[options.extras_require]
test =
    pytest >= 7.0.0
    tox >= 3.24.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git, __pycache__, .tox, dist, build

[egg_info]
tag_build = 
tag_date = 0